# libnx

./: meson.build  meson.options
nx/: meson.build
nx/include/switch/kernel/: svc.h
nx/source/kernel/: svc.c
nx/source/services/: usbds.c
